--- a/index.html
+++ b/index.html
@@ -148,13 +148,13 @@ Loader
 <!-- Right Box Div -->
 </div>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src="js/jquery.min.js"></script>
 <script src="js/owl.carousel.min.js"></script>
 <script src="js/parallax-background.min.js"></script>
 
 <!-- Smoth Scroll -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/plugins/ScrollToPlugin.min.js"></script>
+<script src="js/TweenMax.min.js"></script>
+<script src="js/ScrollToPlugin.min.js"></script>
 <script src="js/jQuery.scrollSpeed.js"></script>
 
 <script>
