--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     <!--[if gte IE 9]<style type="text/css">.gradient {filter: none;}</style><![endif]-->
 </head>
 <body id="Top">
-
+<!--
 <div class="loader">
 <img src="images/logo.png" alt="Logo">
 Loader
-</div>
+</div>-->
 
 <header>
 <div class="header">
@@ -118,16 +118,11 @@ Loader
     </div>
 </section>
 
-
-
 <div class="owl-carousel" id="HeroSlider">
 	<div class="item"> <h4>1 Image</h4> </div>
 	<div class="item"> <h4>2 Image</h4> </div>
     <div class="item"> <h4>3 Image</h4> </div>
 </div>
-
-
-
 
 <hr>
 
@@ -166,7 +161,7 @@ Loader
 })(jQuery);
 </script>
 
-<script src="js/queryloader2.min.js" type="text/javascript"></script>
+<!--<script src="js/queryloader2.min.js" type="text/javascript"></script>-->
 <script src="js/general.js"></script>
 
 <script>
